--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@ h1 {
     font-size: 28px;
     background-color: rgba(255, 255, 255, .7);
     padding: 5px 10px;
-    margin-bottom: 10px;
+    margin: 10px 0;
     border-radius: 5px;
 }
 
