--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 850px) {
+    body {
+        background: url(../image/bg-mobile.jpg) bottom/cover no-repeat;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .logo {
         width: 200px;
