criacao novo design: talismans em disposicao de circulo

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,32 +5,11 @@
 }
 
 @media screen and (max-width: 768px) {
-    .logo {
-        width: 200px;
+    .centro__talisman-selecionado>.talisman-selecionado__descricao {
+        width: 80vw;
+        position: fixed;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
     }
-
-    .banner__imagem {
-        width: 200px;
-    }
-
-    .banner {
-        margin-top: 10px;
-        height: auto;
-    }
-
-    .selecionado__talisman-descricao {
-        width: 70%;
-    }
-
-
-    .talisman > img {
-        width: 100px;
-    }
-}
-
-@media screen and (max-width: 479px) {
-    .talisman > img {
-        width: 90px;
-    }
-    
 }
